--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ jupyter_core==5.9.1
 kiwisolver==1.4.9
 matplotlib==3.10.8
 matplotlib-inline==0.2.1
+matplotlib-venn==1.1.2
 nest-asyncio==1.6.0
 numpy==2.4.2
 packaging==26.0
@@ -28,6 +29,7 @@ psutil==7.2.2
 pure_eval==0.2.3
 Pygments==2.19.2
 pyparsing==3.3.2
+PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 pyzmq==27.1.0
 scipy==1.17.0
